tests/snapshots/wallets/unlock/exists.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - wallets
    - unlock
    - wallet
    - "1234"
---
success: true
exit_code: 0
----- stdout -----
Success!

----- stderr -----
