tests/snapshots/wallets/unlock/missing_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - wallets
    - unlock
    - wallet
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <PASSWORD>

Usage: kermit wallets unlock <WALLET_NAME> <PASSWORD>

For more information, try '--help'.
