tests/snapshots/wallets/unlock/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - wallets
    - unlock
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <WALLET_NAME>
  <PASSWORD>

Usage: kermit wallets unlock <WALLET_NAME> <PASSWORD>

For more information, try '--help'.
